--- a/router.html
+++ b/router.html
@@ -2,7 +2,7 @@
 <html ng-app="routerApp">
 <head>
 	<meta charset="UTF-8">
-	<title>라우터 데모 엡</title>
+	<title>라우터 데모 앱</title>
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
 	<script type="text/javascript" src="libs/angular/angular.js"></script>
 	<script type="text/javascript" src="libs/angular/angular-route.js"></script>
